--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -2298,6 +2298,8 @@
                     window.saveMenuItem = saveMenuItem;
                     window.deleteMenuItem = deleteMenuItem;
                     window.handleCategoryChange = handleCategoryChange;
+                    window.handleCategoryChange = handleCategoryChange;
+        })(); // Close the checkAdminAccess IIFE
     </script>
 </body>
 
