--- a/admin_dashboard.html
+++ b/admin_dashboard.html
@@ -621,6 +621,46 @@
         </div>
     </div>
 
+    <!-- Access Denied Modal -->
+    <div id="accessDeniedModal" class="custom-modal"
+        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.75); z-index:9999; align-items:center; justify-content:center;">
+        <div
+            style="max-width:420px; width:90%; padding:30px; background:#1e293b; border-radius:12px; border:2px solid rgba(239,68,68,0.3); box-shadow:0 20px 60px rgba(0,0,0,0.5);">
+            <!-- Lock Icon -->
+            <div
+                style="width:60px; height:60px; margin:0 auto 18px; background:rgba(239,68,68,0.15); border-radius:50%; display:flex; align-items:center; justify-content:center; border:2px solid var(--danger);">
+                <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="var(--danger)" stroke-width="2.5">
+                    <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                    <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                </svg>
+            </div>
+
+            <!-- Title -->
+            <h2 style="text-align:center; margin-bottom:12px; font-size:20px; font-weight:600; color:white;">Access
+                Denied</h2>
+
+            <!-- Message -->
+            <p id="accessDeniedMessage"
+                style="color:#94a3b8; text-align:center; margin:0 0 24px 0; line-height:1.6; font-size:14px;"></p>
+
+            <!-- Button -->
+            <button onclick="closeAccessDeniedModal()" style="
+                width:100%;
+                padding:12px 20px;
+                background:var(--danger);
+                color:white;
+                border:none;
+                border-radius:6px;
+                font-weight:600;
+                font-size:14px;
+                cursor:pointer;
+                transition:all 0.2s;
+            " onmouseover="this.style.background='#dc2626'" onmouseout="this.style.background='var(--danger)'">
+                OK
+            </button>
+        </div>
+    </div>
+
     <!-- Role Management Modal -->
     <div id="roleModal" class="custom-modal" style="display:none; align-items:center; justify-content:center;">
         <div class="modal-content" style="max-width: 600px; margin:auto;">
@@ -808,7 +848,7 @@
     </div>
 
     <script>
-        const supabaseUrl =laofjfpcrlgevxkozy.supabase.co';
+        const supabaseUrl = laofjfpcrlgevxkozy.supabase.co';
         const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InBrbGFvZmpmcGNybGdldnhrb3p5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUyNjY1MDcsImV4cCI6MjA4MDg0MjUwN30.sNg6OVLocM1D-bG9LXTlDSsy6s74oW1SQ89QWCMbOKE';
         let _supabase;
 
@@ -1002,6 +1042,19 @@
             document.getElementById('confirmModal').style.display = 'none';
             confirmCallback = null;
         }
+
+        // Access Denied Modal Functions
+        function showAccessDeniedModal(actionName) {
+            const modal = document.getElementById('accessDeniedModal');
+            document.getElementById('accessDeniedMessage').textContent =
+                `You don't have permission to ${actionName}. Please contact your administrator if you need access.`;
+            modal.style.display = 'flex';
+        }
+
+        function closeAccessDeniedModal() {
+            document.getElementById('accessDeniedModal').style.display = 'none';
+        }
+
         function toggleSidebar() {
             document.querySelector('.sidebar').classList.toggle('open');
             document.querySelector('.sidebar-overlay').classList.toggle('active');
